--- a/userappAN/src/app/pages/task-details/task-details.component.html
+++ b/userappAN/src/app/pages/task-details/task-details.component.html
@@ -42,6 +42,10 @@
     </div>
   </div>
 
+  <button (click)="exportToPDF()" class="button-export">
+    <span class="fas fa-file-pdf">Export as PDF</span>
+  </button>
+
   <a routerLink="/tasks" class="back-button">
     <span class="btn-text">Back to Tasks</span>
     <span class="btn-icon">←</span>
