--- a/userappAN/src/app/pages/tasks/tasks.component.html
+++ b/userappAN/src/app/pages/tasks/tasks.component.html
@@ -1,4 +1,5 @@
 <div class="background-container">
+
   <div class="add-task-container">
     <button (click)="addTask()" class="add-task-btn">
       <i class="fas fa-plus-circle"></i> Add Task
@@ -83,12 +84,15 @@
           </td>
           <td>
             <button (click)="showQRCode(task, qrCodeModal); $event.stopPropagation()" class="btn btn-sm btn-info">
-              <i class="fas fa-qrcode"></i> <!-- Font Awesome QR code icon -->
+              <i class="fas fa-qrcode"></i> 
             </button>
           </td>
         </tr>
       </tbody>
     </table>
+
+   
+
 
     <div class="pagination-controls">
       <pagination-controls 
