--- a/userappAN/src/app/pages/supplier-chart/supplier-chart.component.html
+++ b/userappAN/src/app/pages/supplier-chart/supplier-chart.component.html
@@ -1,5 +1,5 @@
 <div class="chart-container">
-    <h2>📊 Supplier Click Statistics</h2>
+    <h2>📊 Supplier Statistics</h2>
     <canvas baseChart
             [data]="chartData"
             [options]="chartOptions"
