--- a/userappAN/src/app/pages/supplier-list/supplier-list.component.html
+++ b/userappAN/src/app/pages/supplier-list/supplier-list.component.html
@@ -1,6 +1,6 @@
 <div class="supplier-list-container">
   <h1 class="page-title">
-    <i class="fas fa-boxes"></i> Supplier List
+    📦 Supplier List
   </h1>
 
   <!-- ✅ Search Bar -->
