--- a/userappAN/src/app/pages/sidebar/sidebar.component.html
+++ b/userappAN/src/app/pages/sidebar/sidebar.component.html
@@ -4,6 +4,7 @@
   <h2 class="menu-title">Menu</h2>
   <ul>
     <li><a routerLink="/tasks">📋 Tasks</a></li>
+    <li><a routerLink="/suppliers">📦 Suppliers</a></li>
     
     <li *ngIf="isAdmin"><a routerLink="/roles">⚙️ Roles</a></li>
     
