--- a/userappAN/src/app/components/supplier-summary/supplier-summary.component.html
+++ b/userappAN/src/app/components/supplier-summary/supplier-summary.component.html
@@ -36,4 +36,6 @@
       </div>
     </mat-card-content>
   </mat-card>
+  <button class="btn-back" (click)="goBack()">⬅ Back to Suppliers</button>
+
 </div>
