--- a/userappAN/src/app/pages/supplier-add/supplier-add.component.html
+++ b/userappAN/src/app/pages/supplier-add/supplier-add.component.html
@@ -1,10 +1,6 @@
 <div class="home-container">
   <!-- Header Section -->
-  <div class="home-header">
-    <button [disabled]="loading || supplierForm.invalid" type="submit">Add Supplier</button>
-    <span *ngIf="loading">Analyzing sentiment and saving...</span>
-        <p>Fill in the details below to add a new supplier.</p>
-  </div>
+  
 
   <!-- Main Form Section -->
   <div class="home-content">
@@ -60,7 +56,7 @@
         </div>
 
         <!-- Add after the notes textarea -->
-<div class="form-group">
+<!--div class="form-group">
   <button type="button" class="btn-summarize" (click)="analyzeSentiment()">
     Analyze Sentiment
   </button>
@@ -70,7 +66,7 @@
   <span *ngIf="sentimentError" class="error-text">
     {{ sentimentError }}
   </span>
-</div>
+</div-->
 
         <!-- Material Resource Dropdown -->
         <div class="form-group">
