--- a/userappAN/src/app/pages/dashboard/dashboard.component.html
+++ b/userappAN/src/app/pages/dashboard/dashboard.component.html
@@ -61,5 +61,9 @@
   </div>
 </div>
 
+<button class="go-to-map-button" (click)="goToMap()">
+  View Supplier Distribution on Map
+</button>
+
 <!-- Go Back Button -->
 <button class="btn-back" (click)="goBack()">⬅ Back to Suppliers</button>
