--- a/userappAN/src/app/pages/project-location/project-location.component.html
+++ b/userappAN/src/app/pages/project-location/project-location.component.html
@@ -1,6 +1,10 @@
-<div>
-    <h3>Voir sur Google Maps</h3>
-    <a [href]="googleMapsUrl" target="_blank">
-      📍 Ouvrir "{{ adresse }}" sur Google Maps
-    </a>
-  </div>  
+<div class="map-container">
+  <google-map height="100%" width="100%" [center]="center" [zoom]="zoom">
+    <map-marker *ngFor="let p of projects"
+                [position]="{ lat: +p.latitude, lng: +p.longitude }"
+                [title]="p.name"
+                [label]="{ text: p.name, color: 'white' }"
+                [options]="{ animation: google.maps.Animation.DROP }">
+    </map-marker>
+  </google-map>
+</div>
