--- a/userappAN/src/app/pages/sidebar/sidebar.component.html
+++ b/userappAN/src/app/pages/sidebar/sidebar.component.html
@@ -11,10 +11,17 @@
       <a (click)="navigateToProfile()">👤 Profile</a>
     </li>
     <li><a routerLink="/gantt"> 📆 Planning</a></li>
-    <li><a routerLink="/project"> 📝 Project</a></li>
-    <li><a routerLink="/stats"> 📊 Stats</a></li>
-    <li><a routerLink="/map"> 🗺️ Map</a></li>
-    <li><a routerLink="/predict"> 🔮 Predict Status</a></li>
+    
+    <li (click)="toggleProjectMenu()" [class.active]="isProjectMenuOpen">
+      <a href="javascript:void(0)">📝 Project ▾</a>
+      <ul class="submenu" [class.show]="isProjectMenuOpen">
+        <li><a routerLink="/project">📄 Management</a></li>
+        <li><a routerLink="/stats">📊 Stats</a></li>
+        <li><a routerLink="/map">🗺️ Map</a></li>
+        <li><a routerLink="/predict">🔮 Predict Status</a></li>
+      </ul>
+    </li>
+    
     
   </ul>
 </div>
