--- a/userappAN/src/app/pages/prediction-statut/prediction-statut.component.html
+++ b/userappAN/src/app/pages/prediction-statut/prediction-statut.component.html
@@ -1,11 +1,10 @@
 <div class="prediction-container">
   <h2>Prédiction du Statut du Projet</h2>
 
-  <button (click)="predictStatus()" [disabled]="isLoading">
-    {{ isLoading ? 'Prédiction en cours...' : 'Prédire le statut' }}
-  </button>
+  <button (click)="predictStatus()">Prédire le statut</button>
 
-  <div *ngIf="predictionResult" class="result">
-    <strong>Résultat :</strong> {{ predictionResult }}
-  </div>
+  <div *ngIf="isLoading">Chargement...</div>
+<div *ngIf="!isLoading && predictionResult">
+  Résultat de la prédiction : {{ predictionResult }}
 </div>
+
