--- a/userappAN/src/app/pages/add-project/add-project.component.css
+++ b/userappAN/src/app/pages/add-project/add-project.component.css
@@ -88,3 +88,11 @@ button[type="submit"]:hover {
   font-size: 14px;
   margin-top: 5px;
 }
+
+.map-container {
+  width: 100%;
+  height: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
