--- a/userappAN/src/app/pages/add-project/add-project.component.html
+++ b/userappAN/src/app/pages/add-project/add-project.component.html
@@ -26,6 +26,33 @@
       <div *ngIf="!project.endDate && formSubmitted" class="error">End date is required.</div>
     </div>
   
+    <div class="form-group">
+      <label>Location on map</label>
+      <div id="map" class="map-container"></div>
+    </div>
+
+    <div class="form-group">
+      <label for="latitude">Latitude</label>
+      <input type="text" id="latitude" name="latitude" [(ngModel)]="project.latitude" readonly>
+    </div>
+    
+    <div class="form-group">
+      <label for="longitude">Longitude</label>
+      <input type="text" id="longitude" name="longitude" [(ngModel)]="project.longitude" readonly>
+    </div>
+        
+    <div class="form-group">
+      <label for="city">City</label>
+      <input type="text" id="city" name="city" [(ngModel)]="project.city" required>
+      <div *ngIf="!project.city && formSubmitted" class="error">City is required.</div>
+    </div>
+
+    <div class="form-group">
+      <label for="location">Location</label>
+      <input type="text" id="location" name="location" [(ngModel)]="project.location" required>
+      <div *ngIf="!project.location && formSubmitted" class="error">Location is required.</div>
+    </div>
+    
     <button type="submit" class="btn btn-primary">Add project</button>
   </form>
   
