--- a/userappAN/src/app/pages/header/header.component.html
+++ b/userappAN/src/app/pages/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
     
-    <div class="logo">MyApp</div>
+    <div class="logo">BuildFlow</div>
     <nav class="nav-links">
       <a href="home">Home</a>
       <a href="about">About</a>
