object detection for safety

--- a/userappAN/src/app/pages/sidebar/sidebar.component.html
+++ b/userappAN/src/app/pages/sidebar/sidebar.component.html
@@ -16,6 +16,12 @@
         <i class="fas fa-chart-pie"></i> Charts
       </a>
     </li>
+    <li *ngIf="isAdmin">
+      <a routerLink="/camera">
+        <i class="fas fa-shield-alt"></i> Safety Check
+      </a>
+    </li>
+    
     
 
     
