--- a/userappAN/src/app/pages/supplier-map/supplier-map.component.html
+++ b/userappAN/src/app/pages/supplier-map/supplier-map.component.html
@@ -8,6 +8,9 @@
   
     <div class="map-actions">
       <button class="clear-markers-btn" (click)="clearMarkers()">Clear Markers</button>
+
+      <button class="btn-dashboard" (click)="navigateToDashboard()">⬅ Back to Dashboard</button>
+
     </div>
   </div>
   
