--- a/userappAN/src/app/pages/supplier-map/supplier-map.component.css
+++ b/userappAN/src/app/pages/supplier-map/supplier-map.component.css
@@ -32,3 +32,18 @@
     background-color: #0056b3;
   }
   
+
+  .btn-dashboard {
+    background-color: #4CAF50; /* Green background */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 20px; /* Adds space above the button */
+    width: auto; /* Adjust width based on content */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    display: inline-block;
+  }
